<resources>
    <string name="CALL_LOG_BLOCK_NUMBER">you will no longer receive calls from this number</string>
    <string name="CALL_LOG_CLEARED">All call log cleared</string>
    <string name="Ignore">Ignore</string>
    <string name="MENU_ACTION_BACK">back</string>
    <string name="MENU_ACTION_BLOCK">Block</string>
    <string name="MENU_ACTION_CALL">Call</string>
    <string name="MENU_ACTION_CANCEL">Cancel</string>
    <string name="MENU_ACTION_CLEAR">Clear</string>
    <string name="MENU_ACTION_DISSELECTED">Deselect</string>
    <string name="MENU_ACTION_DONE">Done</string>
    <string name="MENU_ACTION_MESSAGE">Message</string>
    <string name="MENU_ACTION_OK">OK</string>
    <string name="MENU_ACTION_OPTIONS">Options</string>
    <string name="MENU_ACTION_SELECT">Select</string>
    <string name="MENU_ACTION_UNBLOCK">Unblock</string>
    <string name="MENU_ACTION_VIEW">View</string>
    <string name="MENU_REFRESH">Refresh</string>
    <string name="NO_CALL_LOG">Sorry,No Call Log Can Be Applied</string>
    <string name="New">New</string>
    <string name="a11y_call_duration_format">%1$d %2$s %3$d %4$s</string>
    <string name="a11y_call_duration_short_format">%1$d %2$s</string>
    <string name="a11y_call_incoming_answer_description">Answer</string>
    <string name="a11y_call_incoming_decline_description">Decline</string>
    <string name="a11y_description_incall_label_manage_content">Manage callers</string>
    <string name="a11y_description_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_description_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_description_incoming_call_reject_with_sms">Reject with message</string>
    <string name="a11y_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_incoming_call_reject_with_sms">Reject this call with a message</string>
    <string name="a11y_incoming_call_swipe_gesture_prompt">Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="a11y_incoming_call_swipe_to_answer">Swipe up with two fingers to answer or down to reject the call</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_build_version">Build version</string>
    <string name="about_open_source_licenses">Open source licenses</string>
    <string name="about_open_source_licenses_summary">License details for open source software</string>
    <string name="about_phone_label">About</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="about_terms_of_service">Terms of service</string>
    <string name="accessibility_settings_title">Accessibility</string>
    <string name="account_phone">Device-only, unsynced</string>
    <string name="actionIncomingCall">Incoming calls</string>
    <string name="action_block_number">Block number</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="action_menu_call_history_description">Call history</string>
    <string name="action_menu_dialpad_button">key pad</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="action_report_number">Report inaccurate number</string>
    <string name="action_unblock_number">Unblock number</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="activity_title_licenses">Open source licenses</string>
    <string name="activity_title_settings">Settings</string>
    <string name="adb_enable_switch">Switch ADB debugging?</string>
    <string name="adb_enable_switch_no">No</string>
    <string name="adb_enable_switch_yes">Yes</string>
    <string name="addBlockedNumber">Add number</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_call_call_log">Call log</string>
    <string name="add_call_contact">Contact</string>
    <string name="add_call_dialer">Dial</string>
    <string name="add_call_select">Select</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="add_participant_option_msg">Add participant</string>
    <string name="add_to_exsit_contact">Add to existing contact</string>
    <string name="add_to_pinboard">Add to pinboard</string>
    <string name="add_to_speed_dial">Add to speed dial</string>
    <string name="add_wait">Add wait</string>
    <string name="all_contacts_empty">"You don't have any contacts yet"</string>
    <string name="all_contacts_empty_add_contact_action">Create new contact</string>
    <string name="allow">Allow</string>
    <string name="alreadyBlocked">%1$s is already blocked.</string>
    <string name="always_warn">Show warning every time</string>
    <string name="answer_and_drop_current_call">Answer and drop current call</string>
    <string name="answer_and_drop_onhold_call">Answer and drop call on-hold</string>
    <string name="app_name">Library</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationLabel">Phone</string>
    <string name="assistant_dialing">Assisted Dialing On</string>
    <string name="assistant_incall_connecting">Assisted Dialing...</string>
    <string name="assisted_dialing_close">Close assisted dialling</string>
    <string name="assisted_dialing_open">Open assisted dialling</string>
    <string name="block_list">Blocked numbers</string>
    <string name="blocked_call_settings_import_button">Import</string>
    <string name="blocked_call_settings_import_description">You previously marked some callers to be automatically sent to voicemail via other apps.</string>
    <string name="blocked_call_settings_view_numbers_button">View Numbers</string>
    <string name="blocked_numbers_disabled_emergency_desc">Call blocking has been disabled because you contacted emergency services from this phone within the last 48 hours. It will be automatically reenabled once the 48 hour period expires.</string>
    <string name="blocked_numbers_disabled_emergency_header_label">Call blocking temporarily off</string>
    <string name="call_information">Call Information</string>
    <string name="call_log_delete_all">Clear call history</string>
    <string name="change_pin_title">Change Voicemail PIN</string>
    <string name="clear_call_history">Clear all</string>
    <string name="contacts">Contacts</string>
    <string name="description_contacts">View Contacts</string>
    <string name="description_search">Search contacts and places</string>
    <string name="description_start_voice_search">Start voice search</string>
    <string name="dialer_hint_find_contact">Search contacts</string>
    <string name="enter_current_pin">Enter Current PIN</string>
    <string name="enter_greeting_new_name">Enter your new name</string>
    <string name="greeting">Greeting</string>
    <string name="incall_content_description_earpiece">Handset earpiece</string>
    <string name="incall_content_description_muted">Muted</string>
    <string name="incall_content_description_speaker">Speaker</string>
    <string name="incall_content_description_unmuted">Unmuted</string>
    <string name="input_number">Input Number</string>
    <string name="main_send_feedback">Send feedback</string>
    <string name="migrate_blocked_numbers_dialog_allow_button">Allow</string>
    <string name="migrate_blocked_numbers_dialog_message">To better protect you, Phone needs to change how blocking works. Your blocked numbers will now stop both calls and texts and may be shared with other apps.</string>
    <string name="migrate_blocked_numbers_dialog_title">New, simplified blocking</string>
    <string name="native_voicemail_automatically_download_summary">Whether automatically download content over cellular networks</string>
    <string name="native_voicemail_automatically_download_title">Automatically download</string>
    <string name="native_voicemail_transcription_preference_title">Voicemail to Text</string>
    <string name="recentCalls_removeFromRecentList">Remove entry</string>
    <string name="rename_greeting">Rename Greeting</string>
    <string name="rtt_hide_interface">Hide RTT interface</string>
    <string name="save_as_new_contact">Save as new contact</string>
    <string name="search">@android:string/search_go</string>
    <string name="search_font_family">sans-serif</string>
    <string name="send_to_message">Send message</string>
    <string name="settings">Settings</string>
    <string name="speed_dial_cancel">Cancel</string>
    <string name="speed_dial_ok">OK</string>
    <string name="tab_title_call_history">Call History</string>
    <string name="voicemail_autodownload_off">Off</string>
    <string name="voicemail_autodownload_on">On</string>
    <string name="voicemail_change_greeting_preference_title">Voicemail greeting</string>
    <string name="voicemail_change_pin_key">voicemail_change_pin_key</string>
    <string name="voicemail_change_pin_preference_title">Change PIN</string>
    <string name="voicemail_entry_pin_title">Enter you new PIN(4-9 digit)</string>
    <string name="voicemail_preference_download_key">voicemail_preference_download_key</string>
    <string name="voicemail_preference_greeting_key">voicemail_preference_greeting_key</string>
    <string name="voicemail_preference_voicetotest_key">voicemail_preference_voicetotest_key</string>
    <string name="voicemail_settings_title">Voicemail</string>
    <string name="voicemail_welcome_details">Getting your voicemails just got a whole lot easier. Simply press play to listen to any of your messages. Visual Voicemail may use infrequent, free SMS message to communicate with the Voicemail server.</string>
    <string name="voicemail_welcome_sub_title">Welcome to Visual Voicemail</string>
    <string name="voicemail_welcome_title">Welcome</string>
</resources>