<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/overflow_menu_background" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="180.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.android.incallui.rtt.impl.RttCheckableButton android:id="@id/menu_mute" app:contentDescriptionChecked="@string/incall_content_description_muted" app:contentDescriptionUnchecked="@string/incall_content_description_unmuted" style="@style/RttButton" />
    <com.android.incallui.rtt.impl.RttCheckableButton android:id="@id/menu_add_call" android:drawableStart="@drawable/quantum_ic_add_call_vd_theme_24" style="@style/RttButton" />
    <com.android.incallui.rtt.impl.RttCheckableButton android:id="@id/hide_rtt_interface" android:text="@string/rtt_hide_interface" app:contentDescriptionChecked="@string/incall_content_description_speaker" app:contentDescriptionUnchecked="@string/incall_content_description_earpiece" style="@style/RttButton" />
</LinearLayout>