<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/blocked_numbers_disabled_for_emergency" android:background="@color/blocked_number_disabled_emergency_background_color" android:paddingTop="27.0dip" android:paddingBottom="29.0dip" android:focusable="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/blocked_number_container_padding" android:paddingEnd="44.0dip">
        <TextView android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/blocked_numbers_disabled_emergency_header_label" style="@style/BlockedNumbersDescriptionTextStyle" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/blocked_numbers_disabled_emergency_desc" style="@style/BlockedNumbersDescriptionTextStyle" />
    </LinearLayout>
    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" card_view:cardCornerRadius="0.0dip">
        <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/blocked_number_header_color" android:gravity="center_vertical" android:id="@id/blocked_number_text_view" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/block_list" android:paddingStart="@dimen/blocked_number_container_padding" style="@android:style/TextAppearance.Material.Subhead" />
            <RelativeLayout android:id="@id/import_settings" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/blocked_number_settings_description_text_size" android:textColor="@color/secondary_text_color" android:id="@id/import_description" android:paddingTop="11.0dip" android:paddingBottom="27.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/blocked_call_settings_import_description" android:paddingStart="@dimen/blocked_number_container_padding" android:paddingEnd="@dimen/blocked_number_container_padding" style="@style/BlockedNumbersDescriptionTextStyle" />
                <Button android:id="@id/import_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blocked_call_settings_import_button" android:layout_below="@id/import_description" android:layout_marginEnd="@dimen/blocked_number_container_padding" android:layout_alignParentEnd="true" style="@style/DialerFlatButtonStyle" />
                <Button android:id="@id/view_numbers_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blocked_call_settings_view_numbers_button" android:layout_below="@id/import_description" android:layout_marginEnd="8.0dip" android:layout_toStartOf="@id/import_button" style="@style/DialerFlatButtonStyle" />
                <View android:background="@color/divider_line_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_below="@id/import_button" />
            </RelativeLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/migrate_promo" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="@color/blocked_number_header_color" android:gravity="center_vertical" android:id="@id/migrate_promo_header" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/migrate_blocked_numbers_dialog_title" android:paddingStart="@dimen/blocked_number_container_padding" android:paddingEnd="@dimen/blocked_number_container_padding" style="@android:style/TextAppearance.Material.Subhead" />
                <TextView android:textColor="@color/secondary_text_color" android:id="@id/migrate_promo_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/blocked_number_container_padding" android:text="@string/migrate_blocked_numbers_dialog_message" android:layout_marginStart="@dimen/blocked_number_container_padding" android:layout_marginEnd="@dimen/blocked_number_container_padding" />
                <Button android:layout_gravity="end" android:id="@id/migrate_promo_allow_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/blocked_number_container_padding" android:text="@string/migrate_blocked_numbers_dialog_allow_button" android:layout_marginStart="@dimen/blocked_number_container_padding" android:layout_marginEnd="@dimen/blocked_number_container_padding" style="@style/DialerPrimaryFlatButtonStyle" />
                <View style="@style/FullWidthDivider" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/add_number_linear_layout" android:background="?android:selectableItemBackground" android:paddingTop="@dimen/blocked_number_add_top_margin" android:paddingBottom="@dimen/blocked_number_add_bottom_margin" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:contentDescription="@string/addBlockedNumber" android:paddingStart="@dimen/blocked_number_horizontal_margin">
                <ImageView android:id="@id/add_number_icon" android:layout_width="@dimen/contact_photo_size" android:layout_height="@dimen/contact_photo_size" android:importantForAccessibility="no" />
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="@dimen/blocked_number_horizontal_margin">
                    <TextView android:textSize="@dimen/blocked_number_primary_text_size" android:textColor="@color/blocked_number_primary_text_color" android:id="@id/add_number_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/addBlockedNumber" android:includeFontPadding="false" />
                </LinearLayout>
            </LinearLayout>
            <View android:id="@id/blocked_number_list_divider" android:background="@color/divider_line_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginStart="72.0dip" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>