<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="@color/vvm_actionbar_bg" android:layout_width="fill_parent" android:layout_height="38.0px">
        <TextView android:textSize="20.0px" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rename_greeting" />
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enter_greeting_new_name" />
            <EditText android:id="@id/et_rename" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/greeting" android:maxLength="15" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>