<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="@color/vvm_actionbar_bg" android:layout_width="fill_parent" android:layout_height="38.0px">
        <TextView android:textSize="20.0px" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/voicemail_welcome_title" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0px" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/call_subject_dialog_margin" android:text="@string/voicemail_welcome_sub_title" android:layout_marginStart="@dimen/call_subject_dialog_margin" />
        <TextView android:textSize="16.0px" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/voicemail_welcome_details" android:layout_marginStart="@dimen/call_subject_dialog_margin" android:layout_marginEnd="@dimen/call_subject_dialog_margin" />
    </LinearLayout>
</LinearLayout>