<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:baselineAligned="false" android:layout_weight="1.0" android:paddingStart="10.0dip" android:paddingEnd="10.0dip">
        <EditText android:orientation="vertical" android:id="@id/edit_container" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/input_number" android:singleLine="true" android:layout_weight="1.0" android:inputType="phone" />
        <ImageButton android:id="@id/select_contact" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/quantum_ic_people_white_24" />
    </LinearLayout>
    <View android:background="?android:dividerHorizontal" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_cancel" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/speed_dial_cancel" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
        <View android:background="?android:dividerHorizontal" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:id="@id/btn_complete" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/speed_dial_ok" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>