<?xml version="1.0" encoding="utf-8"?>
<view android:theme="@style/DialtactsSearchBarThemeOverlay" android:orientation="horizontal" android:id="@id/search_view_container" android:background="@drawable/rounded_corner" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/search_margin_horizontal" android:layout_marginTop="@dimen/search_top_margin" android:layout_marginRight="@dimen/search_margin_horizontal" android:layout_marginBottom="@dimen/search_bottom_margin" android:elevation="@dimen/search_box_elevation" class="com.android.dialer.app.widget.SearchEditTextLayout"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/search_box_collapsed" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/search_box_left_padding">
        <ImageView android:id="@id/search_magnifying_glass" android:padding="@dimen/search_box_search_icon_padding" android:layout_width="@dimen/search_box_icon_size" android:layout_height="@dimen/search_box_icon_size" android:src="@drawable/quantum_ic_search_vd_theme_24" android:scaleType="center" android:tint="@color/searchbox_icon_tint" android:importantForAccessibility="no" />
        <TextView android:textSize="@dimen/search_collapsed_text_size" android:textColorHint="@color/searchbox_hint_text_color" android:gravity="center_vertical" android:id="@id/search_box_start_search" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/search_box_collapsed_text_margin_left" android:hint="@string/dialer_hint_find_contact" android:layout_weight="1.0" android:fontFamily="@string/search_font_family" />
        <ImageView android:id="@id/voice_search_button" android:background="?android:selectableItemBackgroundBorderless" android:clickable="true" android:layout_width="@dimen/search_box_icon_size" android:layout_height="fill_parent" android:src="@drawable/ic_mic_grey600" android:scaleType="center" android:tint="@color/searchbox_icon_tint" android:contentDescription="@string/description_start_voice_search" />
        <ImageButton android:id="@id/dialtacts_options_menu_button" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="@dimen/search_box_icon_size" android:layout_height="fill_parent" android:src="@drawable/quantum_ic_more_vert_white_24" android:scaleType="center" android:tint="@color/searchbox_icon_tint" android:contentDescription="@string/action_menu_overflow_description" android:paddingEnd="@dimen/search_box_right_padding" />
    </LinearLayout>
    <include layout="@layout/search_bar_expanded" />
</view>